# autocomplete

./: README.md  pyproject.toml
.badge/: coverage.json
.github/workflows/: test.yml
autocomplete/: radix.py  trie.py
autocomplete/tests/: test_radix.py  test_trie.py
docs/: usage.md
patrix/: radix.py
patrix/tests/: test_radix.py  test_trie.py
